--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "dat-gui": "^0.5.0",
+    "jquery": "^3.1.1",
     "stats.js": "^0.17.0",
     "three-orbit-controls": "^82.1.0"
   }
