--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dat-gui": "^0.5.0",
     "jquery": "^3.1.1",
     "stats.js": "^0.17.0",
-    "three-orbit-controls": "^82.1.0"
+    "three-orbit-controls": "^82.1.0",
+    "tone": "^0.9.0"
   }
 }
